<resources>
    <string name="app_name">TallerInteligente</string>
    <string name="registrar">REGISTRAR</string>
    <string name="volver">Volver</string>
    <string name="dni_nie">DNI || NIE</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="telefono">Teléfono</string>
    <string name="completar_campos">DEBES COMPLETAR LOS CAMPOS</string>
    <string name="contrasena">Contraseña</string>
    <string name="minimo_contrasena">La CONTRASEÑA tiene que tener 6 caracteres como minimo</string>
    <string name="error_registro">No se pudo registrar el usuario</string>
    <string name="cerrarSesion">Cerrar</string>
    <string name="modelo">Modelo</string>
    <string name="matricula">Matrícula</string>
    <string name="estado">ESTADO</string>
</resources>