<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayoutProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="557dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imgMarca"
            android:layout_width="130dp"
            android:layout_height="99dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/taller" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modelo"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado"
                android:textColor="#129761"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMatricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/matricula" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>